# DEMLP

./: README.md  main.py  pyproject.toml  setup.sh
modules/: process_dataset.py
output/augmentation/fold_1/: metrics.txt
output/augmentation/fold_2/: metrics.txt
output/augmentation/fold_3/: metrics.txt
output/augmentation/fold_4/: groups.txt  metrics.txt
output/augmentation/fold_5/: metrics.txt
output/padrao/fold_1/: metrics.txt
output/padrao/fold_2/: groups.txt  metrics.txt
output/padrao/fold_3/: metrics.txt
output/padrao/fold_4/: metrics.txt
output/padrao/fold_5/: groups.txt  metrics.txt
output/small-data/fold_1/: groups.txt  metrics.txt
output/small-data/fold_2/: metrics.txt
output/small-data/fold_3/: groups.txt  metrics.txt
output/small-data/fold_4/: metrics.txt
output/small-data/fold_5/: metrics.txt
output/test1/: config.txt
output/test1/augmentation/fold_1/: metrics.txt
output/test1/augmentation/fold_2/: metrics.txt
output/test1/augmentation/fold_3/: metrics.txt
output/test1/default/fold_1/: metrics.txt
output/test1/small-data/: excluded_images.txt
output/test2/: config.txt  detected_groups.txt
output/test2/small-data/: excluded_images.txt
src/: data_strategies.py  define_model.py  grad_cam.py  groups_dataset.py  prepare_dataset.py  read_dataset.py  utils_dataset.py
src/dataset/: __init__.py  groups_dataset.py  prepare_dataset.py  read_dataset.py  strategies_dataset.py  utils_dataset.py
src/model/: __init__.py  define_model.py  run_model.py  utils_model.py
src/visual/: grad_cam.py  plot_errors.py  plot_metrics.py
(+31 files in other folders)
