[project]
name = "demlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tensorflow[and-cuda]>=2.21.0; sys_platform == 'linux'",
    "tensorflow>=2.21.0; sys_platform != 'linux'",
]
